@@ -5,6 +5,8 @@
   support it (#316)
 * Fix rescan logic for Zookeeper-backed collections (#317)
 * Support + operator for concatenating tuples
+* Fix intermittent EM::ConnectionNotBound exceptions during the Bud shutdown
+  sequence
 
 == 0.9.7 / 2013-04-22
 
